--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-image: url('https://img1.wsimg.com/isteam/ip/ef91730d-47e1-4aa4-8c05-0a7049cd9d83/Urbanize%20Sustainable%20Logo%20(Presentatio-6af2a6c.png/:/rs=w:1600,h:768,cg:true,m/cr=w:1600,h:768');
+      background-image: url('https://img1.wsimg.com/isteam/ip/ef91730d-47e1-4aa4-8c05-0a7049cd9d83/URBANIZE%20Map%20(5).png/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1160,h:653');
       background-size: cover;
       background-position: center;
       color: white;
